// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot class-properties: class-properties 1`] = `
"'use strict';

class A {
        constructor() {
                this.a = () => 'hello';
        }

}"
`;

exports[`snapshot dead code: dead code 1`] = `
"\\"use strict\\";

function hoge() {}"
`;

exports[`snapshot flowtype: flowtype 1`] = `
"'use strict';

const a = 'hello';"
`;

exports[`snapshot object reset spread: object reset spread 1`] = `
"\\"use strict\\";

const a = Object.assign({}, foo);"
`;

exports[`snapshot react: react 1`] = `
"\\"use strict\\";

const A = () => React.createElement(
        \\"div\\",
        null,
        \\"hello\\"
);"
`;
